--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@supabase/supabase-js": "^2.55.0",
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
